# xueba-site

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/models/: user.rs
backend/src/routes/: class.rs  mod.rs  user.rs
frontend/: index.html  inner-page.html  package-lock.json  package.json
frontend/assets/css/: style.css
frontend/assets/js/: main.js
frontend/src/: Navbar.tsx  ServerFunctions.ts  _themes.scss  index.scss  index.tsx  models.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx
